--- a/Prepare/Frontend/package.json
+++ b/Prepare/Frontend/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "next",
-    "build": "next build"
+    "dev": "next -p 3060",
+    "build": "next build",
+    "start": "next start"
   },
   "eslintConfig": {
     "extends": [
@@ -19,6 +20,7 @@
     "antd": "^4.16.13",
     "next": "^11.1.0",
     "next-redux-wrapper": "^7.0.2",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
@@ -29,7 +31,6 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "prettier": "2.3.0",
-    "prop-types": "^15.7.2",
     "sass": "^1.38.1"
   },
   "description": ""
