--- a/Prepare/Frontend/package.json
+++ b/Prepare/Frontend/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@ant-design/icons": "^4.6.3",
     "antd": "^4.16.13",
+    "axios": "^0.22.0",
     "next": "^11.1.0",
     "next-redux-wrapper": "^7.0.2",
     "prop-types": "^15.7.2",
@@ -26,7 +27,8 @@
     "react-redux": "^7.2.4",
     "react-slick": "^0.28.1",
     "redux": "^4.1.1",
-    "redux-devtools-extension": "^2.13.9"
+    "redux-devtools-extension": "^2.13.9",
+    "redux-saga": "^1.1.3"
   },
   "devDependencies": {
     "eslint": "^7.27.0",
