--- a/Prepare/Frontend/package.json
+++ b/Prepare/Frontend/package.json
@@ -19,9 +19,11 @@
     "@ant-design/icons": "^4.6.3",
     "antd": "^4.16.13",
     "axios": "^0.22.0",
+    "faker": "^4.1.0",
+    "immer": "^7.0.1",
+    "shortid": "^2.2.15",
     "next": "^11.1.0",
     "next-redux-wrapper": "^7.0.2",
-    "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
